<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="0.5sp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_gravity="bottom"
        android:background="#000"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:id="@+id/transcriptionField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:text="@string/default_value_dictionary_trasncription_field"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/wordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_value_dictionary_word_field"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="2dp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp">
            <TextView
                android:id="@+id/translationField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/default_value_dictionary_translation_field"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="5sp"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>