<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_your_teacher_chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_teacher_chat_control_ic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_teacher_bg_corn" />

                <TextView
                    android:id="@+id/tv_teacher_chat_control_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/main_chat_teacher_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_teacher_chat_control_ic"
                    app:layout_constraintTop_toTopOf="@+id/iv_teacher_chat_control_ic" />

                <TextView
                    android:id="@+id/tv_teacher_chat_control_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/main_chat_teacher_content"
                    android:textColor="@color/tundora"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_teacher_chat_control_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_teacher_chat_control_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_your_class_chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_class_chat_control_ic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_class_bg_corn" />

                <TextView
                    android:id="@+id/tv_class_chat_control_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/main_chat_class_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_class_chat_control_ic"
                    app:layout_constraintTop_toTopOf="@+id/iv_class_chat_control_ic" />

                <TextView
                    android:id="@+id/tv_lass_chat_control_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/main_chat_class_content"
                    android:textColor="@color/tundora"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_class_chat_control_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_class_chat_control_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_your_bot_chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_bot_chat_control_ic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_bot_bg_corn" />

                <TextView
                    android:id="@+id/tv_bot_chat_control_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/main_chat_bot_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_bot_chat_control_ic"
                    app:layout_constraintTop_toTopOf="@+id/iv_bot_chat_control_ic" />

                <TextView
                    android:id="@+id/tv_bot_chat_control_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/main_chat_bot_content"
                    android:textColor="@color/tundora"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_bot_chat_control_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bot_chat_control_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>