<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/bright_sun">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bright_sun">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_main"
            android:layout_width="218dp"
            android:layout_height="176dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_main" />

        <EditText
            android:id="@+id/et_login"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:autofillHints="username"
            android:background="@drawable/et_circle_bg"
            android:hint="@string/login_screen_surname"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_main" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:background="@drawable/et_circle_bg"
            android:hint="@string/login_screen_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_circle_bg"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:text="@string/login_screen_next"
            android:textColor="@color/scorpion"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <ProgressBar
            android:id="@+id/pb_progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/progress_bar_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_next" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_qr_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pb_progress"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_qr" />

        <TextView
            android:id="@+id/tv_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login_screen_qr_code"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>