<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_manage_class"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_student_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_managment_class" />

                <TextView
                    android:id="@+id/tv_student_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/class_managment_class_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_student_icon"
                    app:layout_constraintTop_toTopOf="@+id/iv_student_icon" />

                <TextView
                    android:id="@+id/tv_student_action"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="40dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/class_managment_class_content"
                    android:textColor="@color/tundora"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_student_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_student_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_manage_lesson"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_manage_lessons_control_ic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_managment_lesson" />

                <TextView
                    android:id="@+id/tv_manage_lessons_control_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/class_managment_lesson_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_manage_lessons_control_ic"
                    app:layout_constraintTop_toTopOf="@+id/iv_manage_lessons_control_ic" />

                <TextView
                    android:id="@+id/tv_manage_lessons_control_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:layout_marginEnd="40dp"
                    android:text="@string/class_managment_lesson_content"
                    android:textColor="@color/tundora"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_manage_lessons_control_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_manage_lessons_control_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_class"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_class_control_ic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_class_bg_sweet_corn" />

                <TextView
                    android:id="@+id/tv_class_control_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/class_chat_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_class_control_ic"
                    app:layout_constraintTop_toTopOf="@+id/iv_class_control_ic" />

                <TextView
                    android:id="@+id/tv_class_control_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:layout_marginEnd="40dp"
                    android:text="@string/class_chat_content"
                    android:textColor="@color/tundora"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_class_control_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_class_control_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>